# file-monitor

./: Cargo.toml
src/: config.rs  email.rs  file_monitor.rs  main.rs  ui.rs
